# sigdoc

./: .env.example  .gitignore  CHANGELOG.md  docker-compose.prod.yml
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_variables_meta.py  003_template_shares_and_user_limits.py  004_usage_tracking_and_audit_logging.py  005_subscription_tiers.py  006_rate_limits_per_tier.py  007_tenant_onboarding.py  008_admin_seed_canonical.py  009_email_verification_fields.py  010_pdf_export.py  011_role_expansion.py  012_demo_reset.py  013_admin_seed_hardening.py  014_template_folders.py  015_template_presets.py  016_template_version_files.py
backend/src/app/: config.py  main.py
backend/tests/: conftest.py
backend/tests/fakes/: __init__.py  fake_audit_repository.py  fake_document_repository.py  fake_email_service.py  fake_pdf_converter.py  fake_quota_service.py  fake_storage_service.py  fake_subscription_tier_repository.py  fake_template_engine.py  fake_template_folder_repository.py  fake_template_preset_repository.py  fake_template_repository.py  fake_tenant_repository.py  fake_usage_repository.py  fake_user_repository.py
backend/tests/integration/: conftest.py  test_admin_seed_hardening_migration.py  test_audit_api.py  test_auth_api.py  test_auth_refresh_role.py  test_demo_reset_migration.py  test_dev_reset_admin.py  test_documents_api.py  test_documents_download_format.py  test_documents_preview_api.py  test_folders_api.py  test_health_api.py  test_pdf_export.py  (+18 more)
(+396 files in other folders)
